--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,8 @@
 	path = kg6zjm/odoo-shipstation-fix
 	url = git@github.com:kg6zjm/odoo-shipstation-fix.git
 	branch = master
+
+[submodule "kg6zjm/odoo-magento2"]
+	path = kg6zjm/odoo-magento2
+	url = git@github.com:kg6zjm/odoo-magento2.git
+	branch = master
